infra/k8s/comment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
        - name: comment-service
          image: muhammedshaheer/comment-service
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  selector:
    app: comment-service
  ports:
    - name: comment-service
      protocol: TCP
      port: 4001
      targetPort: 4001
