infra/k8s/moderation-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation-service
  template:
    metadata:
      labels:
        app: moderation-service
    spec:
      containers:
        - name: moderation-service
          image: muhammedshaheer/moderation-service
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  selector:
    app: moderation-service
  ports:
    - name: moderation-service
      protocol: TCP
      port: 4003
      targetPort: 4003
