infra/k8s/post-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - name: post-service
          image: muhammedshaheer/post-service
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  selector:
    app: post-service
  ports:
    - name: post-service
      protocol: TCP
      port: 4000
      targetPort: 4000
