infra/k8s/post-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service-nodeport
spec:
  type: NodePort
  selector:
    app: post-service
  ports:
    - name: post-service
      protocol: TCP
      port: 4000
      targetPort: 4000
