infra/k8s/query-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
        - name: query-service
          image: muhammedshaheer/query-service
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query-service
  ports:
    - name: query-service
      protocol: TCP
      port: 4002
      targetPort: 4002
